twitch-tv-viewer/style.css
body {

}
.sub {
  padding-left: 0px;
}

.inp {


}
.wrap {
  width: 100%;
  max-width: 600px;
  padding: 30px;
  margin: auto;
  border-radius: 5px;
}

.outerwrap {
  min-height: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 30px;
}

h1 {
  text-align: center;
}

.streams-cont {
margin-top: 0;
  padding-top: 10px;
border: 1px solid #ddd;
  border-top: transparent;

}
.formwrap {
  margin-bottom: 20px;
      padding: 0 6px 0 16px;
}
.formrow {padding-top: 20px;}
.sm {
position: absolute;
    width: 50px;
    height: 50px;
    border-radius: 50%;
  border: 1px solid #eaeaea;
    left: 15px;
    display: inline-block;
    vertical-align: middle;
}
.trow {
    margin: 10px;
    padding: 10px 10px 5px 90px;
    position: relative;
  color: black;
  border: 1px solid #ddd;
}

.close-x {
  position: absolute;
  z-index: 999;
  top: 10px;
  right: 10px;
  margin: 3px 3px;
  width: 22px;
  height: 20px;
  background-color: #fff;
  color: #c7c8c9;
  border-radius: 50%;
  border: none;
/*  border: 1px solid #c7c8c9; */
      padding: 0 0 0 5px;
  font-size: 1.5em;
}

.close-x:hover{
color: #777 !important;
}

.offline i {
  color: #aaa;
}

.online i {
  color: #1eda1e;
}

.notfound i {
  color: red;
}

.xx {
  color: #c7c8c9 !important;
  line-height: .75em;
  position: absolute;
  top: 2px;
  right: 3px;
}

.xx:hover {
    color: #777 !important;
}

.header {
  margin-top: 0;
  padding-top: 0;
  font-size: 1.25em;
  width: 90%;
}

.status {
  padding-left: 10px;
}

